<resources>
    <string name="app_name">SmartDevice</string>
    <string name="aty_initdata_tips_loading">初始数据加载中</string>
    <string name="aty_initdata_tips_settingdevice">正在配置商户设备信息</string>
    <string name="aty_initdata_tips_verion_mode">请先在帮助中心配置版本模式</string>
    <string name="aty_initdata_tips_scene_mode">请先在帮助中心配置场景模式</string>
    <string name="aty_initdata_tips_set_cabinet">请先在帮助中心配置机柜</string>
    <string name="aty_initdata_tips_read_config_success">读取商户设备配置信息成功</string>
    <string name="aty_initdata_tips_read_config_failure">读取商户设备配置信息失败</string>
    <string name="aty_initdata_tips_retry_read_config">重新尝试读取设备信息</string>
    <string name="aty_initdata_tips_setting_config">正在配置设备信息</string>
    <string name="aty_initdata_tips_setting_config_is_null">配置设备信息失败：初始数据为空</string>
    <string name="aty_initdata_tips_setting_object_is_null">配置设备信息失败：初始对象为空</string>
    <string name="aty_initdata_tips_setting_device_is_null">配置设备信息失败：设备对象为空</string>
    <string name="aty_initdata_tips_setting_complete">配置设备信息完成，正在启动设备恢复原始状态</string>
    <string name="aty_initdata_tips_setting_end">配置设备信息结束，进入应用</string>

    <string name="aty_nav_title_smlogin">登录</string>
    <string name="aty_nav_title_smhelptool">帮助中心</string>
    <string name="aty_nav_title_smlockerboxmanager">格子管理</string>
    <string name="aty_nav_title_smlockerboxuserecord">使用记录</string>
    <string name="aty_nav_title_smfactorysetting">出厂设置</string>
    <string name="aty_nav_title_smexceptionviewer">异常查看</string>
    <string name="aty_nav_title_smshowsysstatusbar">显示导航</string>
    <string name="aty_nav_title_smdeviceinfo">设备信息</string>
    <string name="aty_nav_title_smusermanager">用户管理</string>
    <string name="aty_nav_title_smselectuser">选择用户</string>
    <string name="aty_nav_title_smopendoor">打开门柜</string>
    <string name="aty_nav_title_smcheckupdateapp">检查更新</string>
    <string name="aty_nav_title_smcloseapp">关闭应用</string>
    <string name="aty_nav_title_smrebootsys">重启系统</string>
    <string name="aty_nav_title_smexitmanager">退出管理</string>
    <string name="aty_nav_title_smsmfactorysetting">出厂设置</string>
    <string name="aty_nav_title_smappscenesetting">应用场景</string>
    <string name="aty_nav_title_smhome">管理中心</string>
    <string name="aty_nav_title_smbookertakestock">库存盘点</string>
    <string name="aty_nav_title_smbookertakestockresult">库存盘点结果</string>
    <string name="aty_nav_title_booker_identity_verify">身份验证</string>
    <string name="aty_nav_title_booker_borrow_return_inspect">借阅信息</string>
    <string name="aty_nav_title_booker_borrow_return_overview">借/还</string>
    <string name="aty_nav_title_booker_borrowed_book">已借的书</string>
    <string name="aty_smlogin_tv_txt_scene">场景</string>
    <string name="aty_smlogin_et_hint_username">用户名</string>
    <string name="aty_smlogin_et_hint_password">密码</string>
    <string name="aty_smlogin_btn_txt_login">登录</string>
    <string name="aty_smlogin_scene_init_data_help">帮助中心</string>
    <string name="aty_smlogin_scene_manager_center">管理中心</string>
    <string name="aty_smfactorysetting_tips_nosetversion">未设置版本模式</string>
    <string name="aty_smfactorysetting_tips_nosetscene">未设置场景模式</string>
    <string name="aty_smappscenesetting_com_prl">串口协议(JSON)</string>
    <string name="aty_smlockerboxmanager_tv_txt_cur_cabinet">当前机柜</string>
    <string name="aty_smusermanager_btn_txt_newuser">新建用户</string>
    <string name="aty_bookermain_query">查询</string>
    <string name="aty_bookermain_borrow">借书</string>
    <string name="aty_bookermain_return">还书</string>
    <string name="unknown">未知</string>
    <string name="scenemode_1">寄存柜</string>
    <string name="scenemode_2">书柜</string>
    <string name="vesionmode_1">单机版</string>
    <string name="vesionmode_2">网络版</string>
    <string name="empty"> </string>
    <string name="it_ls_logtips_tv_txt_datetime">时间</string>
    <string name="it_ls_logtips_tv_txt_content">内容</string>
    <string name="img_content_description_empty">图片</string>
    <string name="ly_nav_header_btn_txt_right">保存</string>
    <string name="title">标题</string>
    <string name="save_success">保存成功</string>
    <string name="save">保存</string>
    <string name="confrim_tips_opendoor">确定打开门柜？</string>
    <string name="confrim_tips_exitmanager">确定退出管理？</string>
    <string name="confrim_tips_delete">确定删除？</string>
    <string name="confrim_tips_closeapp">确定关闭应用？</string>
    <string name="confrim_tips_rebootsys">确定重启系统？</string>
    <string name="tips_username_isnotnull">用户名不能为空</string>
    <string name="tips_username_formatnoright">手机格式有误</string>
    <string name="tips_password_isnotnull">密码不能为空</string>
    <string name="tips_password_formatnoright">密码格式有误</string>
    <string name="tips_password_noright">用户密码不正确</string>
    <string name="tips_fullname_isnotnull">姓名不能为空</string>
    <string name="tips_lockerbox_has_existuse">保存失败，检查到格子存在使用中</string>
    <string name="locker_box_open_status_1">未打开</string>
    <string name="locker_box_open_status_2">已打开</string>
    <string name="locker_box_use_status_1">未使用</string>
    <string name="locker_box_use_status_2">已使用</string>

    <string name="t_deviceid">设备标识</string>
    <string name="t_appversion">应用版本</string>
    <string name="t_ctrlversion">控制版本</string>
    <string name="t_vesionmode">版本模式</string>
    <string name="t_scenemode">场景模式</string>
    <string name="t_vesionmode_1">单机版</string>
    <string name="t_vesionmode_2">网络版</string>
    <string name="t_scenemode_1">寄存柜</string>
    <string name="t_scenemode_2">书柜</string>
    <string name="t_clickinput">请输入</string>
    <string name="t_hint_fullname">请输入姓名</string>
    <string name="t_hint_phonenumner">请输入手机号码</string>
    <string name="t_hint_password">请输入6到18位数字或字母</string>
    <string name="t_hello">您好</string>
    <string name="t_username">用户名</string>
    <string name="t_password">密码</string>
    <string name="t_fullname">姓名</string>
    <string name="t_renlian">人脸</string>
    <string name="t_zhiwen">指纹</string>
    <string name="t_iccard">IC卡</string>
    <string name="t_search">搜索</string>
    <string name="t_change">更改</string>
    <string name="t_distribute_to">分配至</string>
    <string name="t_usage">使用情况</string>
    <string name="t_merch_name">商户</string>
    <string name="t_store_name">店铺</string>
    <string name="t_shop_name">门店</string>
    <string name="t_address">地址</string>
    <string name="t_comname">COM.N</string>
    <string name="t_logout">退出</string>
    <string name="t_open_all">全部打开</string>
    <string name="t_contactus">联系我们</string>
    <string name="t_borrower">借阅人</string>
    <string name="t_borrowcardno">借阅卡号</string>
    <string name="t_canborrow_quantity">可借数量</string>
    <string name="t_borrowed_quantity">已借数量</string>
    <string name="t_willdue_quantity">即将到期</string>
    <string name="t_overdue_quantity">逾期数量</string>
    <string name="t_overdue_fine">逾期费用</string>
    <string name="t_status">状态</string>
    <string name="t_feedback">问题反馈</string>
    <string name="t_contactaddr">联系地址</string>
    <string name="t_brush_iccard">刷卡</string>
    <string name="t_goback">返回</string>
    <string name="t_gohome">主页</string>
    <string name="t_gohelp">帮助</string>
    <string name="t_finish">完成</string>
    <string name="t_borrow_out">借出</string>
    <string name="t_return_in">放入</string>
    <string name="t_cabinet_id">机柜ID</string>
    <string name="t_cabinet_name">机柜名</string>
    <string name="t_com_id">串口</string>
    <string name="t_com_baud">波特</string>
    <string name="t_com_prl">协议</string>
    <string name="t_com_layout">布局</string>
    <string name="t_cancle">否</string>
    <string name="t_sure">是</string>
    <string name="t_close">关闭</string>
    <string name="t_save">保存</string>
</resources>
