<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_nav_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_10"
            android:paddingRight="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_merch_name"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_MerchName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_store_name"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_StoreName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_shop_name"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_ShopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_address"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_deviceid"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_DeviceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_ctrlversion"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_CtrlVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_scenemode"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_SceneMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10"
                android:background="@drawable/vnav_boder_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_vesionmode"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_VersionMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_10"
                android:paddingTop="@dimen/size_10"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_appversion"
                    android:textColor="@color/field_name"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_AppVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/field_value"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>