<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/btn_Nav_Header_Goback"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_60"
        android:baselineAligned="false"
        android:gravity="center_vertical|start"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="@dimen/size_8"
            android:layout_height="@dimen/size_14"
            android:layout_marginStart="@dimen/size_14"
            android:background="@null"
            android:contentDescription="@string/img_content_description_empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_sm_nav_header_btn_goback" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Nav_Header_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:layout_marginBottom="@dimen/size_4"
            android:layout_marginTop="@dimen/size_4"
            android:paddingStart="@dimen/size_30"
            android:paddingEnd="@dimen/size_30"
            android:paddingTop="@dimen/size_5"
            android:paddingBottom="@dimen/size_5"
            android:gravity="center"
            android:text="@string/title"
            android:background="@drawable/booker_nav_header_title_bg"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_Nav_Header_Right"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_60"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        >

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="@dimen/size_12"
            android:text="@string/ly_nav_header_btn_txt_right"
            android:textColor="@color/ly_nav_header_btn_txt_right"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_ActivityFinshTick"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingEnd="@dimen/size_12"
            android:text=""
            android:textColor="@color/ly_nav_header_btn_txt_right"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>


</RelativeLayout>